<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".Enroll">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/selectImage"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:src="@drawable/ic_image" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/select_profile_photo"
            android:textColor="@color/blue"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/border"
            android:hint="@string/first_name"
            android:inputType="textPersonName"
            android:padding="10dp" />

        <EditText
            android:id="@+id/etLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/border"
            android:hint="@string/last_name"
            android:inputType="textPersonName"
            android:padding="10dp" />

        <EditText
            android:id="@+id/etDateOfBirth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/border"
            android:hint="@string/date_of_birth"
            android:inputType="date"
            android:padding="10dp" />

        <EditText
            android:id="@+id/etGender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/border"
            android:hint="@string/gender"
            android:inputType="textPersonName"
            android:padding="10dp" />

        <EditText
            android:id="@+id/etCountry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/border"
            android:hint="@string/country"
            android:inputType="textPersonName"
            android:padding="10dp" />

        <EditText
            android:id="@+id/etState"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/border"
            android:hint="@string/state"
            android:inputType="textPersonName"
            android:padding="10dp" />

        <EditText
            android:id="@+id/etHomeTown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/border"
            android:hint="@string/home_town"
            android:inputType="textPersonName"
            android:padding="10dp" />

        <EditText
            android:id="@+id/etPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/border"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:padding="10dp" />

        <EditText
            android:id="@+id/etTelephoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/border"
            android:hint="@string/telephone_number"
            android:inputType="phone"
            android:padding="10dp" />

        <Button
            android:id="@+id/btnAddUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_user"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:padding="10dp"
            android:background="@color/blue"
            android:layout_margin="5dp"/>
    </LinearLayout>


</ScrollView>
